[project]
name = "pyliski"
version = "0.1.0"
description = "Pyhton implementation of the Iliski MATLAB software for the computation of transfer functions between biological signals"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
